Create board_state Add CORS header Modify disposition of ranks in back

--- a/front/splendia/src/app/token-shop/token-shop/token-shop.component.html
+++ b/front/splendia/src/app/token-shop/token-shop/token-shop.component.html
@@ -1,2 +1,9 @@
 <app-reject-token></app-reject-token>
 <app-buy-token></app-buy-token>
+
+<p>TOKEN SHOP</p>
+<ul>
+    <li *ngFor="let tokenQuantity of tokenQuantities; let i = index">
+        <p>{{tokenQuantity}}</p>
+    </li>
+</ul>
