:construction: board state

--- a/front/splendia/src/app/token-shop/token-shop/token-shop.component.html
+++ b/front/splendia/src/app/token-shop/token-shop/token-shop.component.html
@@ -4,6 +4,12 @@
 <p>TOKEN SHOP</p>
 <ul>
     <li *ngFor="let tokenQuantity of tokenQuantities; let i = index">
-        <p>{{tokenQuantity}}</p>
+        {{tokenQuantity}}
     </li>
+    <!-- <li>1</li>
+    <li>1</li>
+    <li>1</li>
+    <li>1</li>
+    <li>1</li>
+    <li>1</li> -->
 </ul>
