Implement card shop
Create Observable Data Service to share board_state throughout the app
Use css to organize components

--- a/front/splendia/src/app/card-shop/card/card.component.html
+++ b/front/splendia/src/app/card-shop/card/card.component.html
@@ -1,1 +1,10 @@
-<p>card works!</p>
+<div id="card">
+    <div>
+        Bonus : {{card.bonus}}
+        Price : {{card.price}}
+        VP : {{card.victoryPoint}}
+    </div>
+    <button (click)="buyCard()">Buy</button>
+    <button (click)="reserveCard()">Reserve</button>
+
+</div>
