--- a/front/splendia/src/app/board-game/board-game.component.html
+++ b/front/splendia/src/app/board-game/board-game.component.html
@@ -1,4 +1,9 @@
+<div id="boardgame">
 <app-patron-shop></app-patron-shop>
-<app-token-shop></app-token-shop>
-<app-card-shop></app-card-shop>
+<div id="middle-shop">
+    <app-token-shop></app-token-shop>
+    <app-card-shop></app-card-shop>
+</div>
+
 <app-info-player></app-info-player>
+</div>
