start of patron-card component

--- a/front/splendia/src/app/patron-shop/patron-card/patron-card.component.html
+++ b/front/splendia/src/app/patron-shop/patron-card/patron-card.component.html
@@ -1,1 +1,7 @@
-<p>patron-card works!</p>
+
+<div 
+    class="patron-container" 
+    [ngStyle]="{'background-image': 'url(../../../assets/images/noble_' + patronNumberList + '.jpg)'}"
+>
+
+</div>
