--- a/front/splendia/src/app/board-game/board-game.component.scss
+++ b/front/splendia/src/app/board-game/board-game.component.scss
@@ -4,6 +4,18 @@
     flex-wrap: nowrap;
 }
 
+#left-column {
+    align-self: stretch;
+    margin-right: 2em;
+    display: flex;
+    flex-direction: column;
+    width: 6em;
+}
+
+#logs {
+    flex-grow: 1;
+}
+
 #middle-shop {
     display: flex;
     flex-direction: column;
