--- a/front/splendia/src/app/patron-shop/patron-card/patron-card.component.html
+++ b/front/splendia/src/app/patron-shop/patron-card/patron-card.component.html
@@ -1,7 +1,2 @@
 
-<div 
-    class="patron-container" 
-    [ngStyle]="{'background-image': 'url(../../../assets/images/noble_' + patronNumberList + '.jpg)'}"
->
-
-</div>
+<img src="assets/images/patrons/patron_{{patron.patronId}}.jpg" alt="Noble {{patron.patronId}}"/>
