--- a/front/splendia/src/app/patron-shop/patron-card/patron-card.component.scss
+++ b/front/splendia/src/app/patron-shop/patron-card/patron-card.component.scss
@@ -1,10 +1,5 @@
 img {
-    width: 5em;
-    height: 8em;
-}
-
-.patron-container {
-    background-size: contain;
-    width: 5em;
-    height: 8em;
+    width: 100%;
+    height: auto;
+    max-width: 4em;
 }
