made the css used for the tokens global

--- a/front/splendia/src/app/token-shop/token-shop/token-shop.component.html
+++ b/front/splendia/src/app/token-shop/token-shop/token-shop.component.html
@@ -1,8 +1,7 @@
 
 
-<p>TOKEN SHOP</p>
-<ul>
-    <li *ngFor="let tokenQuantity of tokenQuantities; let i = index">
+<ul id="token-shop">
+    <li *ngFor="let tokenQuantity of tokenQuantities; let i = index" [class]="['token', getCssTokenClassOfColor(i)]" >
         {{tokenQuantity}}
     </li>
 </ul>
