--- a/front/splendia/src/app/token-shop/token-shop/token-shop.component.scss
+++ b/front/splendia/src/app/token-shop/token-shop/token-shop.component.scss
@@ -1,6 +1,15 @@
 ul {
   list-style-type: none;
-  padding: 0;
-  margin: 0;
+  padding: 1em;
+  margin: 0 0 1em 0;
+  width: fit-content;
+  border-radius: 25px;
+  transition-duration: 0.5s;
+  cursor: pointer;
+
+  &:hover {
+    background-color: #a9a9a9;
+    transition-duration: 0.5s;
+  }
 }
 
