refactored how tokens are displayed

--- a/front/splendia/src/app/shared/components/tokens-display/tokens-display.component.html
+++ b/front/splendia/src/app/shared/components/tokens-display/tokens-display.component.html
@@ -1,1 +1,5 @@
-<p>tokens-display works!</p>
+<ul>
+    <li *ngFor="let tokenQuantity of tokenQuantities; let i = index" [class.hidden]="!showTokens[i]">
+        {{tokenQuantity}}
+    </li>
+</ul>
