--- a/front/splendia/src/app/token-shop/token-shop/token-shop.component.html
+++ b/front/splendia/src/app/token-shop/token-shop/token-shop.component.html
@@ -1,7 +1,5 @@
 
 
 <ul id="token-shop">
-    <li *ngFor="let tokenQuantity of tokenQuantities; let i = index" [class]="['token', getCssTokenClassOfColor(i)]" >
-        {{tokenQuantity}}
-    </li>
+    <app-tokens-display [tokenQuantities]="tokenQuantities" [showTokens]="[true, true, true, true, true, true]"></app-tokens-display>
 </ul>
