fixed padding issue

--- a/front/splendia/src/app/shared/components/tokens-display/tokens-display.component.html
+++ b/front/splendia/src/app/shared/components/tokens-display/tokens-display.component.html
@@ -1,4 +1,4 @@
-<ul>
+<ul class="tokens-display">
     <li *ngFor="let tokenQuantity of tokenQuantities; let i = index" [class.hidden]="!showTokens[i]">
         {{tokenQuantity}}
     </li>
