Refactored how tokens are displayed

--- a/front/splendia/src/app/shared/components/token/token.component.html
+++ b/front/splendia/src/app/shared/components/token/token.component.html
@@ -1,4 +1,8 @@
-<p>= Token : </p>
-<p>Quantity : {{quantity}}</p>
-<p>color : {{colorsEnum[color]}}</p>
-
+<div 
+    [style.backgroundImage]="getBackgroundImageToken()"
+    [style.color]="getTextColor()"
+    class="token"
+    [class.hidden]="!show"
+>
+    {{ quantity }}
+</div>
