Front token shop api call (#28)
* added function to buy tokens from the server

* token shop subscribes to board_state.bank

* made the css used for the tokens global

* added hover effect for token-shop

* refactored how tokens are displayed

* fixed padding issue

* Refactored how tokens are displayed

* reverted default styles file change

--- a/front/splendia/src/app/shared/components/tokens-display/tokens-display.component.html
+++ b/front/splendia/src/app/shared/components/tokens-display/tokens-display.component.html
@@ -1,1 +1,9 @@
-<p>tokens-display works!</p>
+<div class="tokens-display">
+    <app-token 
+        class="token"
+        *ngFor="let tokenQuantity of tokenQuantities; let i = index" 
+        [color]="i"
+        [quantity]="tokenQuantity"
+        [show]="showTokens[i]"
+    ></app-token>
+</div>
