--- a/front/splendia/src/app/token-shop/token-shop/token-shop.component.html
+++ b/front/splendia/src/app/token-shop/token-shop/token-shop.component.html
@@ -1,8 +1,5 @@
 
 
-<p>TOKEN SHOP</p>
-<ul>
-    <li *ngFor="let tokenQuantity of tokenQuantities; let i = index">
-        {{tokenQuantity}}
-    </li>
+<ul id="token-shop">
+    <app-tokens-display [tokenQuantities]="tokenQuantities" [showTokens]="[true, true, true, true, true, true]"></app-tokens-display>
 </ul>
