--- a/front/splendia/src/app/shared/components/bonus/bonus.component.scss
+++ b/front/splendia/src/app/shared/components/bonus/bonus.component.scss
@@ -1,8 +1,11 @@
 .token {
     background-size: contain;
     background-position: center;
-    width: 70px;
-    height: 70px;
+    width: 50px;
+    height: 50px;
+    margin-right: 10px;
+    margin-left: 10px;
+    // margin-top: 15px;
     text-align: center;
     font-size: 18px;
     font-weight: bold;
