--- a/front/splendia/src/app/shared/components/bonus/bonus.component.scss
+++ b/front/splendia/src/app/shared/components/bonus/bonus.component.scss
@@ -1,6 +1,7 @@
 .token {
     background-size: contain;
     background-position: center;
+    background-repeat: no-repeat;
     width: 50px;
     height: 50px;
     margin-right: 10px;
