--- a/front/splendia/src/app/card-shop/card-rank/card-rank.component.scss
+++ b/front/splendia/src/app/card-shop/card-rank/card-rank.component.scss
@@ -3,3 +3,7 @@
     flex-direction: row;
 }
 
+#decksize {
+    background-image: "../../../assets/images/bonus/bonus_black.png";
+    color: white;
+}
