--- a/front/splendia/src/app/board-game/board-game.component.html
+++ b/front/splendia/src/app/board-game/board-game.component.html
@@ -13,5 +13,6 @@
         [cpu]="cpu"
         [cpuId]="i"></app-info-cpu>
         <app-info-player></app-info-player>
+        <app-reserved-cards></app-reserved-cards>
     </div>
 </div>
