:construction: display current player

--- a/front/splendia/src/app/info-player/info-cpu/info-cpu.component.html
+++ b/front/splendia/src/app/info-player/info-cpu/info-cpu.component.html
@@ -1,5 +1,6 @@
 <div class='info_box'>
     <div class='line'>
+        <p *ngIf="this.cpu.currentPlayer">]</p>
         <p id='name'> CPU#{{this.cpuId}} </p>
         <p id='victorypoints'> {{this.cpu.victoryPoints}} </p>
     </div>
