--- a/front/splendia/src/app/board-game/board-game.component.html
+++ b/front/splendia/src/app/board-game/board-game.component.html
@@ -1,7 +1,7 @@
 <div id="boardgame">
     <div id="left-column">
         <app-patron-shop></app-patron-shop>
-        <div id="logs">Logs</div>
+        <app-logs></app-logs>
     </div>
     <div id="middle-shop">
         <app-token-shop></app-token-shop>
