:bento: added patron images

--- a/front/splendia/src/app/patron-shop/patron-card/patron-card.component.html
+++ b/front/splendia/src/app/patron-shop/patron-card/patron-card.component.html
@@ -1,2 +1,2 @@
 
-<img src="assets/images/patrons/patron_{{patron.patronId}}.jpg" alt="Noble {{patron.patronId}}"/>
+<img src="assets/images/patrons/patron_{{patron.patronId}}.png" alt="Noble {{patron.patronId}}"/>
