:sparkles: Add token shop pop up

--- a/front/splendia/src/app/shared/components/tokens-display/tokens-display.component.html
+++ b/front/splendia/src/app/shared/components/tokens-display/tokens-display.component.html
@@ -1,7 +1,7 @@
 <div class="tokens-display">
     <app-token 
         class="token"
-        *ngFor="let tokenQuantity of tokenQuantities; let i = index" 
+        *ngFor="let tokenQuantity of tokenList; let i = index" 
         [color]="i"
         [quantity]="tokenQuantity"
         [show]="showTokens[i]"
