💄Change style of front end Improve card button and log style Improve structure of the element Modal is now displayed on top of screen

--- a/front/splendia/src/app/board-game/board-game.component.scss
+++ b/front/splendia/src/app/board-game/board-game.component.scss
@@ -2,6 +2,8 @@
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
+    justify-content: space-between;
+    height: auto;
     // background-color: #234975;
 }
 
