--- a/front/splendia/src/app/card-shop/card/card.component.html
+++ b/front/splendia/src/app/card-shop/card/card.component.html
@@ -1,5 +1,12 @@
-<div id="card" [style.backgroundImage]="getImagePath()">
-    <button class="appear" (click)="buyCard()">Buy</button>
-    <button class="appear" (click)="reserveCard()">Reserve</button>
+<div id="card"  [style.backgroundImage]="getImagePath()">
 
+</div>
+
+<div id="buttons">
+    <div>
+        <button id="first-button"  (click)="buyCard()">Buy</button>
+    </div>
+    <div>
+        <button   (click)="reserveCard()">Reserve</button>
+    </div>
 </div>
