--- a/front/splendia/src/app/board-game/board-game.component.html
+++ b/front/splendia/src/app/board-game/board-game.component.html
@@ -4,10 +4,12 @@
         <app-logs></app-logs>
     </div>
     <div id="middle-shop">
-        <app-token-shop></app-token-shop>
+        
         <app-card-shop></app-card-shop>
     </div>
 
+    <div><app-token-shop></app-token-shop></div>
+    
     <div>
         <app-info-cpu *ngFor="let cpu of this.board_state.CPUS; let i=index"
         [cpu]="cpu"
