--- a/front/splendia/src/app/card-shop/card/card.component.scss
+++ b/front/splendia/src/app/card-shop/card/card.component.scss
@@ -1,17 +1,44 @@
 #card{
     width: 5em;
-    height: 10em;
-    background-color: red;
+    height: 7em;
     background-repeat: no-repeat;
     background-size: 100%;
-    margin:1em;
+    margin:0.5em;
 }
 
-.appear{
-    display: none;
-    margin: 15%;
+
+#buttons{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    align-content: center;
+
+}
+button {
+
+  background-color: #fff;
+  border: 1px solid #d5d9d9;
+  border-radius: 8px;
+  box-shadow: rgba(213, 217, 217, .5) 0 2px 5px 0;
+  box-sizing: border-box;
+  color: #0f1111;
+  
+  cursor: pointer;
+  display: inline-block;
+  font-family: "Amazon Ember",sans-serif;
+  font-size: 11px;
+  padding: 0 10px 0 11px;
+  text-align: center;
+  width: 5em;
 }
 
-#card:hover > .appear {
-    display: grid;
+button:hover {
+  background-color: #f7fafa;
+}
+
+button:focus {
+  border-color: #008296;
+  box-shadow: rgba(213, 217, 217, .5) 0 2px 5px 0;
+  outline: 0;
 }
