--- a/front/splendia/src/app/info-player/info-cpu/info-cpu.component.scss
+++ b/front/splendia/src/app/info-player/info-cpu/info-cpu.component.scss
@@ -1,11 +1,12 @@
 .info_box {
     display: grid;
-    outline: solid;
+    border-bottom: solid white;
     padding-left: 5%;
     padding-right: 0%;
     padding-top: 0%;
     padding-bottom: 0%;
     margin: 2%;
+    color:white;
 }
 
 .line {
@@ -16,7 +17,6 @@
 #tokens {
     margin: -2%;
 }
-
 
 
 #victorypoints {
