--- a/front/splendia/src/app/info-player/info-player/info-player.component.scss
+++ b/front/splendia/src/app/info-player/info-player/info-player.component.scss
@@ -1,11 +1,12 @@
 .info_box {
     display: grid;
-    outline: solid;
+    border-bottom: solid;
     padding-left: 5%;
     padding-right: 0%;
     padding-top: 0%;
     padding-bottom: 0%;
     margin: 2%;
+    color:white;
 }
 
 .line {
