--- a/front/splendia/src/app/info-player/info-player/info-player.component.html
+++ b/front/splendia/src/app/info-player/info-player/info-player.component.html
@@ -1,5 +1,5 @@
 <div class='info_box'>
-    <div class='line'>
+    <div class='line' id="text">
         <p *ngIf="this.player.currentPlayer">></p>
         <p id='name'> Player </p>
         <p id='victorypoints'> {{this.player.victoryPoints}} </p>
