--- a/front/splendia/src/app/info-player/reserved-card/reserved-card.component.html
+++ b/front/splendia/src/app/info-player/reserved-card/reserved-card.component.html
@@ -1,3 +1,7 @@
 <div id="card" [style.backgroundImage]="getImagePath()">
-    <button class="appear" (click)="buyCard()">Buy</button>
+</div>
+<div id="buttons">
+    <div>
+        <button id="first-button"  (click)="buyCard()">Buy</button>
+    </div>
 </div>
