--- a/front/splendia/src/app/info-player/reserved-card/reserved-card.component.scss
+++ b/front/splendia/src/app/info-player/reserved-card/reserved-card.component.scss
@@ -7,10 +7,50 @@
 }
 
 .appear{
-    display: none;
+    display: grid;
     margin: 15%;
+    transform: translateY(-4em);
 }
 
 #card:hover > .appear {
     display: grid;
+}
+
+
+#buttons{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    align-content: center;
+
+    transform: translateY(-4em);
+
+}
+button {
+
+  background-color: #fff;
+  border: 1px solid #d5d9d9;
+  border-radius: 8px;
+  box-shadow: rgba(213, 217, 217, .5) 0 2px 5px 0;
+  box-sizing: border-box;
+  color: #0f1111;
+
+  cursor: pointer;
+  display: inline-block;
+  font-family: "Amazon Ember",sans-serif;
+  font-size: 11px;
+  padding: 0 10px 0 11px;
+  text-align: center;
+  width: 5em;
+}
+
+button:hover {
+  background-color: #f7fafa;
+}
+
+button:focus {
+  border-color: #008296;
+  box-shadow: rgba(213, 217, 217, .5) 0 2px 5px 0;
+  outline: 0;
 }
