--- a/front/splendia/src/app/patron-shop/patron-shop/patron-shop.component.html
+++ b/front/splendia/src/app/patron-shop/patron-shop/patron-shop.component.html
@@ -1,3 +1,3 @@
-<div *ngFor="let patron of patrons">
+<div *ngFor="let patron of patrons" id="patron-shop">
     <app-patron-card class="patron-card" [patron]="patron"></app-patron-card>
 </div>
