:children_crossing: stop from taking negative number of tokens

--- a/front/splendia/src/app/token-shop/buy-token/buy-token.component.html
+++ b/front/splendia/src/app/token-shop/buy-token/buy-token.component.html
@@ -18,7 +18,8 @@
         [color]="i"
         [quantity]="tokenQuantity"
         [show]="true"
-        
+        (click)="cancelToken(i)"
+
         ></app-token>
 <button (click)="buyTokensConfirmation()">Confirm selection</button>
 </div>
