--- a/front/splendia/src/app/card-shop/card/card.component.html
+++ b/front/splendia/src/app/card-shop/card/card.component.html
@@ -3,8 +3,11 @@
 </div>
 
 <div id="buttons">
-    <div>
-        <button id="first-button"  (click)="buyCard()">Buy</button>
+    <div *ngIf="card.buyable">
+        <button id="buyable"  (click)="buyCard()">Buy</button>
+    </div>
+    <div *ngIf="!card.buyable">
+        <button id="notbuyable"  (click)="buyCard()">Buy</button>
     </div>
     <div>
         <button   (click)="reserveCard()">Reserve</button>
