--- a/front/splendia/src/app/card-shop/card/card.component.scss
+++ b/front/splendia/src/app/card-shop/card/card.component.scss
@@ -32,6 +32,7 @@ button {
   padding: 0 5px 0 5px;
   text-align: center;
   width: 5em;
+  height: 90%;
 }
 
 button:hover {
@@ -42,4 +43,18 @@ button:focus {
   border-color: #008296;
   box-shadow: rgba(213, 217, 217, .5) 0 2px 5px 0;
   outline: 0;
+}
+
+#notbuyable {
+  background-color: #666;
+  border: 1px solid #777;
+  box-shadow: rgba(213, 217, 217, .5) 0 2px 5px 0;
+  color: lightgray;
+
+  margin-bottom: 1%;
+}
+
+#buyable {
+  background-color: #fff;
+  margin-bottom: 1%;
 }
