:sparkles: display number of reserved cards for cpu

--- a/front/splendia/src/app/info-player/info-cpu/info-cpu.component.scss
+++ b/front/splendia/src/app/info-player/info-cpu/info-cpu.component.scss
@@ -28,3 +28,9 @@
     font-weight: bold;
     padding-bottom: 0%;
 }
+
+#nb-reserved {
+    font-weight: bold;
+    padding-bottom: 0%;
+    word-wrap: normal;
+}
