--- a/front/splendia/src/app/info-player/info-cpu/info-cpu.component.html
+++ b/front/splendia/src/app/info-player/info-cpu/info-cpu.component.html
@@ -1,4 +1,30 @@
-<div class='info_box'>
+<div *ngIf="this.winner" class='info_box_won'>
+    <div class='line' id="text">
+        <p id='name'> CPU#{{this.cpuId}} </p>
+        <p id='victorypoints'> VP : {{this.cpu.victoryPoints}} </p>
+    </div>
+    <div class='line'>
+        <app-token id='tokens'
+        class="token"
+        *ngFor="let tokenQuantity of this.cpu.tokenList; let i = index"
+        [color]="i"
+        [quantity]="tokenQuantity"
+        [show]="true"
+        ></app-token>
+    </div>
+    <div class='line'>
+        <app-bonus id='tokens'
+        class="bonus"
+        *ngFor="let tokenQuantity of this.cpu.bonusList; let i = index"
+        [color]="i"
+        [quantity]="tokenQuantity"
+        [show]="this.showBonus[i]"
+        ></app-bonus>
+        <p id='nb-reserved' title="Number of cards reserved buy the CPU">{{ this.cpu.numberReservedCards }}</p>
+    </div>
+</div>
+
+<div *ngIf="!this.winner" class='info_box'>
     <div class='line' id="text">
         <p id='name'> CPU#{{this.cpuId}} </p>
         <p id='victorypoints'> VP : {{this.cpu.victoryPoints}} </p>
