--- a/front/splendia/src/app/info-player/info-player/info-player.component.scss
+++ b/front/splendia/src/app/info-player/info-player/info-player.component.scss
@@ -9,6 +9,19 @@
     color:white;
 }
 
+.info_box_won {
+    display: grid;
+    border-bottom: solid;
+    padding-left: 5%;
+    padding-right: 0%;
+    padding-top: 0%;
+    padding-bottom: 0%;
+    margin: 2%;
+    color: black;
+    background-color: gold;
+    border-radius: .5rem;
+}
+
 .line {
     display: inline-flex;
     padding-bottom: 5%;
@@ -22,7 +35,7 @@
 
 #victorypoints {
     position: relative;
-    left: 250px;
+    left: 200px;
 }
 
 #text {
